bundled_metadata/force-app/main/default/objects/AFH_Account_Summary__c/AFH_Account_Summary__c.object-meta.xml
<CustomObject>
    <label>Account Summary</label>
    <nameField>
        <displayFormat>AS-{00000}</displayFormat>
        <label>Account Summary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Summary</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>