bundled_metadata/force-app/main/default/objects/AFH_Account_Summary__c/fields/AFH_Account__c.field-meta.xml
<CustomField>
    <fullName>AFH_Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Summary</relationshipLabel>
    <relationshipName>Account_Summary</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>