bundled_metadata/force-app/main/default/objects/AFH_Account_Summary__c/fields/AFH_Rating__c.field-meta.xml
<CustomField>
    <fullName>AFH_Rating__c</fullName>
    <label>Rating</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>