bundled_metadata/force-app/main/default/objects/AFH_Account_Summary__c/fields/AFH_Social_Platform__c.field-meta.xml
<CustomField>
    <fullName>AFH_Social_Platform__c</fullName>
    <label>Social Platform</label>
    <length>70</length>
    <type>Text</type>
</CustomField>