bundled_metadata/force-app/main/default/objects/AFH_Account_Summary__c/fields/AFH_Total_Reviews__c.field-meta.xml
<CustomField>
    <fullName>AFH_Total_Reviews__c</fullName>
    <label>Total Reviews</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>