bundled_metadata/force-app/main/default/objects/AFH_Account_Summary__c/fields/AFH_Type__c.field-meta.xml
<CustomField>
    <fullName>AFH_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Social</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>