bundled_metadata/force-app/main/default/objects/AFH_Account_Summary__c/fields/AFH_URL__c.field-meta.xml
<CustomField>
    <fullName>AFH_URL__c</fullName>
    <label>URL</label>
    <length>250</length>
    <type>Text</type>
</CustomField>